@@ -12,12 +12,10 @@ javac -d ..\bin\server.pt.isec ^
   ..\pt\isec\common\model\user\*.java
 pause
 
-java -cp "..\bin\server.pt.isec;..\..\..\..\resources;..\lib\sqlite-jdbc-3.45.2.0.jar;..\lib\slf4j-api-2.0.13.jar;..\lib\slf4j-simple-2.0.13.jar" pt.isec.server.MainServer ^
-  localhost 9999 ^
-  "C:\quiz" ^
-  192.168.1.50 ^
-  5002 ^
-  17003
+java --enable-native-access=ALL-UNNAMED ^
+ -cp "..\bin\server.pt.isec;..\..\resources;..\lib\sqlite-jdbc-3.45.2.0.jar;..\lib\slf4j-api-2.0.13.jar;..\lib\slf4j-simple-2.0.13.jar" ^
+ pt.isec.server.MainServer localhost 9999 PROJECT 192.168.1.50 5003 17003
+
 pause
 
 
